# gentex

./: .travis.yml  CMakeLists.txt  LICENSE  README.md
include/: gentex.hpp  image.hpp
src/: gentex.cpp  gentex.hpp  image.hpp  math.hpp  tool.cpp
tests/: basic.cpp  blend.json  blur.json  color.json  demo.json  formats.json  math.json  noise.json  primitives.json  testmath.cpp  texgenjs.json  tool.cpp  world.json
utils/: cppcheck.sh  generate-sample.sh  montage.sh  tile.sh
